--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui">
 		<meta name="format-detection" content="telephone=no">
-		<link rel="stylesheet" href="./css/reset.css">
+		<link rel="stylesheet" href="CSS/reset.css">
 		<style type="text/css">
 		    html{
 		        width:100%;
@@ -317,12 +317,12 @@
 			</div>
 			<!-- /字体面板 -->
 		</div>
-		<script src="./lib/zepto.min.js"></script>
+		<script src="lib/zepto.min.js"></script>
 		<script>
 			window.jQuery = $;
 		</script>
-		<script src="./js/jquery.base64.js"></script>
-		<script src="./js/jquery.jsonp.js"></script>
+		<script src="JS/jquery.base64.js"></script>
+		<script src="JS/jquery.jsonp.js"></script>
 
 		<script>
 			
